# CircuitPython_DMX_Receiver

./: LICENSE  README.rst  README.rst.license  deploy.py  dmx_receiver.py  makefile  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst  index.rst.license
examples/: dmx_receiver_simpletest.py
requirements/: dev.txt
