# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2024 Dana Runge
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-dmx-receiver"
description = "DMX512 lighting protocol receiver on the RP2040"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Dana Runge", email = "7285068+mydana@users.noreply.github.com"}
]
urls = {Homepage = "https://github.com/mydana/CircuitPython_DMX_Receiver"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "dmx_receiver",
    "dmx",
    "dmx512",
    "rp2040",
    "pio",
    "rs485",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["dmx_receiver"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
